--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/egift-landing-page/component/_egift_one-row-two-col.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/egift-landing-page/component/_egift_one-row-two-col.scss
@@ -18,6 +18,7 @@
       background-color: $egift-landing-page-one-row-two-col-box-bg;
       text-align: center;
       padding: 1.875rem;
+      width: calc(50% - 0.75rem);
 
       .check-balance-wrapper {
         .checkbalance-title {
